TestCases/Errors/MultipleReportFiles/run.bat
..\..\..\Build\windows\spm -r -i MPD.dat -u > Expected.log
..\..\..\Build\windows\spm -s 2 -i MPD.dat > Expected.log
..\..\..\Build\windows\spm -s 2 -i MPD.dat -u > Expected.log

